--- a/template.yaml
+++ b/template.yaml
@@ -1,9 +1,10 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: >
-  aws-root-activity-alert
-
-  Sample SAM Template for aws-root-activity-alert
+Description: Monitor the root login and activities by using AWS SAM with Python 3.8
+Parameters:
+  Channel:
+    Description: "The channel of Slack to push the message"
+    Type: String
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
@@ -11,29 +12,37 @@ Globals:
     Timeout: 3
 
 Resources:
-  HelloWorldFunction:
+  RootActivityRule:
+    Type: AWS::Events::Rule
+    Properties:
+      Description: Events rule for monitoring root API activity (Login)
+      State: ENABLED
+      EventPattern:
+        detail-type:
+          - AWS API Call via CloudTrail
+        detail:
+          userIdentity:
+            - Root
+      Targets:
+        - Arn: !GetAtt
+            - RootActivityFunction
+            - Arn
+          Id: !Ref AWS::StackName
+
+  RootActivityFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: hello_world/
+      CodeUri: root_activity_alert/
       Handler: app.lambda_handler
       Runtime: python3.8
-      Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-          Properties:
-            Path: /hello
-            Method: get
+      Environment:
+        Variables:
+          CHANNEL: !Ref Channel
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: "Hello World Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+  RootActivityFunction:
+    Description: "Root Activity Lambda Function ARN"
+    Value: !GetAtt RootActivityFunction.Arn
